Bug: PRD Reviewer: Lynn Comment: In the Filr web client admin > users > Manage Mobile devices, the number of mobile devices in the header was covering up the help button. I've adjusted the css to see the help button.

--- a/trunk/ssf/gwt/src/org/kablink/teaming/gwt/public/GwtBinderViews.css
+++ b/trunk/ssf/gwt/src/org/kablink/teaming/gwt/public/GwtBinderViews.css
@@ -504,7 +504,7 @@
 /* Start:  Manage devices dialog styles. */
 	.vibe-manageMobileDevicesDlg                    {}
 	.vibe-manageMobileDevicesDlg .popupContent      {background-color: white !important;}
-	.vibe-manageMobileDevicesDlg-captionCount       {position: absolute; top: 8px; right: 0px; padding-left: 10px; padding-right: 20px; font-size: 13px;}
+	.vibe-manageMobileDevicesDlg-captionCount       {position: absolute; top: 11px; right: 40px; padding-left: 10px; padding-right: 10px; font-size: 13px;}
 	.vibe-manageMobileDevicesDlg-headerCaption-user {display: inline-block; overflow: hidden; text-overflow: ellipsis; max-width: 600px;}
 	.vibe-manageMobileDevicesDlg-panel              {}
 	.vibe-manageMobileDevicesDlg-system             {}
